--- a/froggy-gaming/src/HomepageLayout/navigationBar/assets/scss/dropdown.scss
+++ b/froggy-gaming/src/HomepageLayout/navigationBar/assets/scss/dropdown.scss
@@ -143,5 +143,9 @@
 @media screen and (max-width: 1024px) {
     .category {
         display: none;
+
+        &-link {
+            display: none;
+        }
     }
 }
